objects/vlocity_cmt__UISection__c.object
<CustomObject>
    <description>Represents a reusable section label used in object layouts.</description>
    <fields>
        <fullName>vlocity_cmt__EffectiveFromDate__c</fullName>
        <label>Effective From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveUntilDate__c</fullName>
        <label>Effective Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GlobalKey__c</fullName>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Vlocity UI Section</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Section Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity UI Sections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>